# alfasim-sdk

./: .codecov.yml  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.IN  MANIFEST.in  README.md  README.rst  RELEASING.rst  answer.rtd  appveyor.yml  dev-environment.devenv.yml  environment.devenv.yml  mypy.ini  pixi.devenv.toml  pyproject.toml  requirementes_dev.txt  requirements_dev.txt  setup.cfg  setup.py  sonar-project.properties  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  main.yml
alfasim_sdk/: __init__.py  _alfasim_sdk_utils.py  _validators.py  cli.py  constants.py  context.py  data_model.py  data_types.py  hook_specs.py  hook_specs_gui.py  layout.py  models.py  status.py  types.py  variables.py
alfasim_sdk/alfacase/: _alfacase_to_case.py  _case_to_alfacase.py  alfacase.py  alfatable.py  case_description.py  generate_schema.py  schema.py
alfasim_sdk/alfasim_sdk_api/: common.h
alfasim_sdk/alfasim_sdk_api/detail/: bootstrap_win.h
alfasim_sdk/common_testing/: case_builders.py  filled_case_descriptions.py
alfasim_sdk_api/: alfasim_sdk.h  api.h  bootstrap.hpp  commom.h  common.h
alfasim_sdk_api/detail/: api_pointers.h  bootstrap_linux.h  bootstrap_win.h
docs/: Makefile  README.rst  alfasim_sdk_api.cfg  make.bat  requirements.txt
docs/source/: 01_quick_start.rst  02_alfasim_sdk_by_example.rst  03_plugin_structure.rst  04_application_hooks.rst  05_solver_config_hooks.rst  05_solver_hooks.rst  06_solver_hooks.rst  07_lifecycle.rst  07_workflow.rst  99_0_reference.rst  99_1_solver_api_reference.rst  99_2_user_interface_reference.rst  99_3_solver_configuration_reference.rst  alfasim_sdk_by_example.rst  conf.py  index.rst  quick_start.rst
docs/source/_static/: custom.css  data_model_example_1_1.gst
docs/source/alfacase/: 01_alfacase_quick_start.rst  02_alfacase_syntax.rst  03_alfacase_example.rst  04_case_description_quick_start.rst  05_case_description_by_example.rst  alfacase.example.rst  alfacase.quick_start.rst  alfacase.rst  alfacase.syntax.rst  api_reference.rst  case_description.example.rst  case_description.quick_start.rst  case_description.rst  index.rst
docs/source/alfacase_definitions/: AnnulusDescription.txt  CaseDescription.txt  CaseOutputDescription.txt  CasingDescription.txt  CasingSectionDescription.txt  CombinedFluidDescription.txt  CompositionDescription.txt  CompressorEquipmentDescription.txt  CompressorPressureTableDescription.txt  ControllerInputSignalPropertiesDescription.txt  ControllerNodePropertiesDescription.txt  ControllerOutputSignalPropertiesDescription.txt  ControllerSignalPropertiesDescription.txt  ControllerTrendDescription.txt  CvTableDescription.txt  EnvironmentDescription.txt  EnvironmentPropertyDescription.txt  EquipmentDescription.txt  EquipmentTrendDescription.txt  FluidDescription.txt  ForchheimerIPRDescription.txt  FormationDescription.txt  FormationLayerDescription.txt  GasLiftValveEquipmentDescription.txt  GlobalTrendDescription.txt  HeatSourceEquipmentDescription.txt  HeavyComponentDescription.txt  IPRCurveDescription.txt  IPRModelsDescription.txt  (+93 more)
sample_alfasim_result/: .gitattributes
sample_alfasim_result/project.data/: communication.sqlite  log.txt  log_calc.txt
src/_alfasim_sdk/: __init__.py  alfasim_sdk_utils.py  cli.py  constants.py  context.py  hook_specs_gui.py  layout.py  models.py  status.py  types.py  units.py  validators.py  variables.py
src/alfasim_sdk/: __init__.py  _validators.py  context.py  default_tasks.py  hook_specs_gui.py  layout.py  status.py  types.py  units.py  variables.py
src/alfasim_sdk_plugins/: __init__.py
tests/: conftest.py  test_alfasim_sdk.py  test_alfasim_sdk_utils.py  test_case_builders.py  test_cli.py  test_context.py  test_data_models.py  test_data_type.py  test_hook_specs.py  test_invoke.py  test_layout.py  test_models.py  test_results_api.py  test_status.py  test_types.py  test_variables.py
tests/alfacase/: test_alfacase_to_case.py  test_alfatable.py  test_case_description.py  test_case_to_alfacase.py  test_generate_case_description_docstring.py  test_generate_case_schema.py  test_generate_list_of_units.py  test_migration.py  test_multiple_runs.py  test_plugin_alfacase_to_case.py
tests/fixtures/: test_alfasim_runner.py
tests/plugins/: test_context.py  test_layout.py  test_models.py  test_status.py  test_types.py  test_variables.py
tests/results/: test_aggregator.py  test_result_reader.py
tests/test_results_api/: profiles.csv  trends.csv
(+236 files in other folders)
