[build-system]
requires = [
  "setuptools>=42.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
src = [
    "src",
    "tests",
]
format.docstring-code-format = true
lint.select = ['E4', 'E7', 'E9', 'F', 'I']
lint.ignore = [
    "E402",
    "E711",
    "E712",
    "E721",
    "E722",
    "E731",
    "E741",
    "F403",
    "F405",
    "F507",
    "F601",
    "F722",
    "F811",
    "F821",
    "F841",
]
