[metadata]
name = alfasim_sdk
description = ALFAsim API/SDK
url = https://github.com/esss/alfasim-sdk
author = ESSS
author_email = foss@esss.co
long_description = file: README.rst
long_description_content_type= text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.entry_points]
console_scripts =
    alfasim-sdk=alfasim_sdk.cli:main
    alfasim_sdk=alfasim_sdk.cli:main

[options]
packages=find:
include_package_data = True

python_requires = >=3.6
zip_safe = no
setup_requires =
    setuptools>=40.0
install_requires =
    python-hookman
    typing_inspect
    strictyaml
    boltons
    Click>=7.0
    barril>=1.9.0
    pluggy>=0.13.0
