[metadata]
name = alfasim_sdk
description = ALFAsim API/SDK
url = https://github.com/esss/alfasim-sdk
author = ESSS
author_email = foss@esss.co
long_description = file: README.rst
long_description_content_type= text/x-rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options.entry_points]
console_scripts =
    alfasim-sdk=alfasim_sdk:console_main

[options.packages.find]
where = src

[options.package_data]
* = *.h

[options]
packages= find:
package_dir =
    =src
include_package_data = True

python_requires = >=3.10
zip_safe = no
setup_requires =
    setuptools>=40.0
install_requires =
    python-hookman
    typing_inspect
    # 1.4.3 seems to be the first version which bundles ruamel.
    strictyaml>=1.4.3
    boltons
    Click>=7.0
    barril>=1.13,<2.0
    pluggy>=0.13.0
    h5py
